# chess

./: CMakeLists.txt  README.md
docs/: Doxyfile.in  header.html
include/: chess.h  graphics.h  sprite.h  texture.h
src/: chess.cpp  graphics.cpp  main.cpp  sprite.cpp
